frb_example/pure_dart_multi/dart/lib/bridge_generated_shared.io.dart


  ffi.Pointer<wire_SharedStructInBlock2And3> new_box_autoadd_shared_struct_in_block_2_and_3() {
    return _new_box_autoadd_shared_struct_in_block_2_and_3();
  }

  late final _new_box_autoadd_shared_struct_in_block_2_and_3Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_SharedStructInBlock2And3> Function()>>(
          'new_box_autoadd_shared_struct_in_block_2_and_3');
  late final _new_box_autoadd_shared_struct_in_block_2_and_3 = _new_box_autoadd_shared_struct_in_block_2_and_3Ptr
      .asFunction<ffi.Pointer<wire_SharedStructInBlock2And3> Function()>();

  ffi.Pointer<wire_SharedStructOnlyForSyncTest> new_box_autoadd_shared_struct_only_for_sync_test() {
    return _new_box_autoadd_shared_struct_only_for_sync_test();
  }

  late final _new_box_autoadd_shared_struct_only_for_sync_testPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_SharedStructOnlyForSyncTest> Function()>>(
          'new_box_autoadd_shared_struct_only_for_sync_test');
  late final _new_box_autoadd_shared_struct_only_for_sync_test = _new_box_autoadd_shared_struct_only_for_sync_testPtr
      .asFunction<ffi.Pointer<wire_SharedStructOnlyForSyncTest> Function()>();

  ffi.Pointer<wire_SharedComplexEnumInAllBlocks> new_box_shared_complex_enum_in_all_blocks() {
    return _new_box_shared_complex_enum_in_all_blocks();
  }

  late final _new_box_shared_complex_enum_in_all_blocksPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_SharedComplexEnumInAllBlocks> Function()>>(
          'new_box_shared_complex_enum_in_all_blocks');
  late final _new_box_shared_complex_enum_in_all_blocks = _new_box_shared_complex_enum_in_all_blocksPtr
      .asFunction<ffi.Pointer<wire_SharedComplexEnumInAllBlocks> Function()>();

  ffi.Pointer<wire_float_32_list> new_float_32_list(
    int len,
  ) {
    return _new_float_32_list(
      len,
    );
  }

  late final _new_float_32_listPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_float_32_list> Function(ffi.Int32)>>('new_float_32_list');
  late final _new_float_32_list = _new_float_32_listPtr.asFunction<ffi.Pointer<wire_float_32_list> Function(int)>();

  ffi.Pointer<wire_int_32_list> new_int_32_list(
    int len,
  ) {
    return _new_int_32_list(
      len,
    );
  }

  late final _new_int_32_listPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_int_32_list> Function(ffi.Int32)>>('new_int_32_list');
  late final _new_int_32_list = _new_int_32_listPtr.asFunction<ffi.Pointer<wire_int_32_list> Function(int)>();

  ffi.Pointer<wire_list_shared_complex_enum_in_all_blocks> new_list_shared_complex_enum_in_all_blocks(
    int len,
  ) {
    return _new_list_shared_complex_enum_in_all_blocks(
      len,
    );
  }

  late final _new_list_shared_complex_enum_in_all_blocksPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_list_shared_complex_enum_in_all_blocks> Function(ffi.Int32)>>(
          'new_list_shared_complex_enum_in_all_blocks');
  late final _new_list_shared_complex_enum_in_all_blocks = _new_list_shared_complex_enum_in_all_blocksPtr
      .asFunction<ffi.Pointer<wire_list_shared_complex_enum_in_all_blocks> Function(int)>();

  ffi.Pointer<wire_list_shared_struct_in_all_blocks> new_list_shared_struct_in_all_blocks(
    int len,
  ) {
    return _new_list_shared_struct_in_all_blocks(
      len,
    );
  }

  late final _new_list_shared_struct_in_all_blocksPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_list_shared_struct_in_all_blocks> Function(ffi.Int32)>>(
          'new_list_shared_struct_in_all_blocks');
  late final _new_list_shared_struct_in_all_blocks = _new_list_shared_struct_in_all_blocksPtr
      .asFunction<ffi.Pointer<wire_list_shared_struct_in_all_blocks> Function(int)>();

  ffi.Pointer<wire_list_shared_weekdays_enum_in_all_blocks> new_list_shared_weekdays_enum_in_all_blocks(
    int len,
  ) {
    return _new_list_shared_weekdays_enum_in_all_blocks(
      len,
    );
  }

  late final _new_list_shared_weekdays_enum_in_all_blocksPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_list_shared_weekdays_enum_in_all_blocks> Function(ffi.Int32)>>(
          'new_list_shared_weekdays_enum_in_all_blocks');
  late final _new_list_shared_weekdays_enum_in_all_blocks = _new_list_shared_weekdays_enum_in_all_blocksPtr
      .asFunction<ffi.Pointer<wire_list_shared_weekdays_enum_in_all_blocks> Function(int)>();

  ffi.Pointer<wire_uint_8_list> new_uint_8_list(
    int len,
  ) {
    return _new_uint_8_list(
      len,
    );
  }

  late final _new_uint_8_listPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_uint_8_list> Function(ffi.Int32)>>('new_uint_8_list');
  late final _new_uint_8_list = _new_uint_8_listPtr.asFunction<ffi.Pointer<wire_uint_8_list> Function(int)>();

  ffi.Pointer<SharedComplexEnumInAllBlocksKind> inflate_SharedComplexEnumInAllBlocks_Primitives() {
    return _inflate_SharedComplexEnumInAllBlocks_Primitives();
  }

  late final _inflate_SharedComplexEnumInAllBlocks_PrimitivesPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<SharedComplexEnumInAllBlocksKind> Function()>>(
          'inflate_SharedComplexEnumInAllBlocks_Primitives');
  late final _inflate_SharedComplexEnumInAllBlocks_Primitives = _inflate_SharedComplexEnumInAllBlocks_PrimitivesPtr
      .asFunction<ffi.Pointer<SharedComplexEnumInAllBlocksKind> Function()>();

  ffi.Pointer<SharedComplexEnumInAllBlocksKind> inflate_SharedComplexEnumInAllBlocks_Nested() {
    return _inflate_SharedComplexEnumInAllBlocks_Nested();
  }

  late final _inflate_SharedComplexEnumInAllBlocks_NestedPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<SharedComplexEnumInAllBlocksKind> Function()>>(
          'inflate_SharedComplexEnumInAllBlocks_Nested');
  late final _inflate_SharedComplexEnumInAllBlocks_Nested = _inflate_SharedComplexEnumInAllBlocks_NestedPtr
      .asFunction<ffi.Pointer<SharedComplexEnumInAllBlocksKind> Function()>();

  ffi.Pointer<SharedComplexEnumInAllBlocksKind> inflate_SharedComplexEnumInAllBlocks_Optional() {
    return _inflate_SharedComplexEnumInAllBlocks_Optional();
  }

  late final _inflate_SharedComplexEnumInAllBlocks_OptionalPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<SharedComplexEnumInAllBlocksKind> Function()>>(
          'inflate_SharedComplexEnumInAllBlocks_Optional');
  late final _inflate_SharedComplexEnumInAllBlocks_Optional = _inflate_SharedComplexEnumInAllBlocks_OptionalPtr
      .asFunction<ffi.Pointer<SharedComplexEnumInAllBlocksKind> Function()>();

  ffi.Pointer<SharedComplexEnumInAllBlocksKind> inflate_SharedComplexEnumInAllBlocks_Buffer() {
    return _inflate_SharedComplexEnumInAllBlocks_Buffer();
  }

  late final _inflate_SharedComplexEnumInAllBlocks_BufferPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<SharedComplexEnumInAllBlocksKind> Function()>>(
          'inflate_SharedComplexEnumInAllBlocks_Buffer');
  late final _inflate_SharedComplexEnumInAllBlocks_Buffer = _inflate_SharedComplexEnumInAllBlocks_BufferPtr
      .asFunction<ffi.Pointer<SharedComplexEnumInAllBlocksKind> Function()>();

  ffi.Pointer<SharedComplexEnumInAllBlocksKind> inflate_SharedComplexEnumInAllBlocks_Enums() {
    return _inflate_SharedComplexEnumInAllBlocks_Enums();
  }

  late final _inflate_SharedComplexEnumInAllBlocks_EnumsPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<SharedComplexEnumInAllBlocksKind> Function()>>(
          'inflate_SharedComplexEnumInAllBlocks_Enums');
  late final _inflate_SharedComplexEnumInAllBlocks_Enums = _inflate_SharedComplexEnumInAllBlocks_EnumsPtr
      .asFunction<ffi.Pointer<SharedComplexEnumInAllBlocksKind> Function()>();

  ffi.Pointer<SharedComplexEnumInAllBlocksKind> inflate_SharedComplexEnumInAllBlocks_BytesArray() {
    return _inflate_SharedComplexEnumInAllBlocks_BytesArray();
  }

  late final _inflate_SharedComplexEnumInAllBlocks_BytesArrayPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<SharedComplexEnumInAllBlocksKind> Function()>>(
          'inflate_SharedComplexEnumInAllBlocks_BytesArray');
  late final _inflate_SharedComplexEnumInAllBlocks_BytesArray = _inflate_SharedComplexEnumInAllBlocks_BytesArrayPtr
      .asFunction<ffi.Pointer<SharedComplexEnumInAllBlocksKind> Function()>();

  void free_WireSyncReturn(
    WireSyncReturn ptr,
  ) {
    return _free_WireSyncReturn(
      ptr,
    );
  }

  late final _free_WireSyncReturnPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(WireSyncReturn)>>('free_WireSyncReturn');
  late final _free_WireSyncReturn = _free_WireSyncReturnPtr.asFunction<void Function(WireSyncReturn)>();
}

final class _Dart_Handle extends ffi.Opaque {}

final class wire_SharedComplexEnumInAllBlocks_Empty extends ffi.Opaque {}

final class wire_SharedComplexEnumInAllBlocks_Primitives extends ffi.Struct {
  @ffi.Int32()
  external int int32;

  @ffi.Double()
  external double float64;

  @ffi.Bool()
  external bool boolean;
}

final class wire_SharedComplexEnumInAllBlocks_Nested extends ffi.Struct {
  external ffi.Pointer<wire_SharedComplexEnumInAllBlocks> field0;
}

final class wire_SharedComplexEnumInAllBlocks extends ffi.Struct {
  @ffi.Int32()
  external int tag;

  external ffi.Pointer<SharedComplexEnumInAllBlocksKind> kind;
}

final class SharedComplexEnumInAllBlocksKind extends ffi.Union {
  external ffi.Pointer<wire_SharedComplexEnumInAllBlocks_Empty> Empty;

  external ffi.Pointer<wire_SharedComplexEnumInAllBlocks_Primitives> Primitives;

  external ffi.Pointer<wire_SharedComplexEnumInAllBlocks_Nested> Nested;

  external ffi.Pointer<wire_SharedComplexEnumInAllBlocks_Optional> Optional;

  external ffi.Pointer<wire_SharedComplexEnumInAllBlocks_Buffer> Buffer;

  external ffi.Pointer<wire_SharedComplexEnumInAllBlocks_Enums> Enums;

  external ffi.Pointer<wire_SharedComplexEnumInAllBlocks_BytesArray> BytesArray;
}

final class wire_SharedComplexEnumInAllBlocks_Optional extends ffi.Struct {
  external ffi.Pointer<ffi.Int32> field0;

  external ffi.Pointer<wire_uint_8_list> field1;
}

final class wire_uint_8_list extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_SharedComplexEnumInAllBlocks_Buffer extends ffi.Struct {
  external ffi.Pointer<wire_float_32_list> field0;
}

final class wire_float_32_list extends ffi.Struct {
  external ffi.Pointer<ffi.Float> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_SharedComplexEnumInAllBlocks_Enums extends ffi.Struct {
  @ffi.Int32()
  external int field0;
}

final class wire_SharedComplexEnumInAllBlocks_BytesArray extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> field0;
}

final class wire_CrossSharedStructInBlock1And2 extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> name;
}

final class wire_CrossSharedStructInBlock2And3 extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> name;
}

final class wire_list_shared_complex_enum_in_all_blocks extends ffi.Struct {
  external ffi.Pointer<wire_SharedComplexEnumInAllBlocks> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_SharedStructInAllBlocks extends ffi.Struct {
  @ffi.Int32()
  external int id;

  @ffi.Double()
  external double num;

  external ffi.Pointer<wire_uint_8_list> name;

  external ffi.Pointer<wire_list_shared_complex_enum_in_all_blocks> enum_list;
}

final class wire_SharedStructInBlock1And2 extends ffi.Struct {
  @ffi.Int32()
  external int id;

  @ffi.Double()
  external double num;

  external ffi.Pointer<wire_uint_8_list> name;
}

final class wire_SharedStructInBlock2And3 extends ffi.Struct {
  @ffi.Int32()
  external int id;

  @ffi.Double()
  external double num;

  external ffi.Pointer<wire_uint_8_list> name;
}

final class wire_SharedStructOnlyForSyncTest extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> name;

  @ffi.Double()
  external double score;
}

final class wire_StringList extends ffi.Struct {
  external ffi.Pointer<ffi.Pointer<wire_uint_8_list>> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_int_32_list extends ffi.Struct {
  external ffi.Pointer<ffi.Int32> ptr;
